@@ -546,8 +546,11 @@ project(":grobid-trainer") {
         tasks.create(name: taskName, type: JavaExec, group: 'modeltraining') {
             main = mainClassName
             classpath = sourceSets.main.runtimeClasspath
-            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0)
+            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
                 jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+            } else {
+                jvmArgs '-Xmx3072m'
+            }
             systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
         }
     }
@@ -556,10 +559,11 @@ project(":grobid-trainer") {
         tasks.create(name: taskName, type: JavaExec, group: 'modeltraining') {
             main = mainClassNameAndArgs[0]
             classpath = sourceSets.main.runtimeClasspath
-            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0)
+            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
                 jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0)
-                jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+            } else {
+                jvmArgs '-Xmx3072m'
+            }
             args mainClassNameAndArgs[1]
         }
     }
